recursion.cons.lessons.recursion.cons.Min.scala.error
min:4: error: reassignment to val
      list=list.tail
          ^min:11: error: type mismatch;
 found   : List[Int]
 required: List[Char]
    return(min(compare(l)))
                       ^min:11: error: type mismatch;
 found   : List[Char]
 required: List[Int]
    return(min(compare(l)))
                      ^